--- a/css/main.css
+++ b/css/main.css
@@ -711,6 +711,10 @@ video {
   display: none;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-80 {
   height: 20rem;
 }
@@ -725,6 +729,22 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-\[5\] {
+  height: 5;
+}
+
+.h-\[59px\] {
+  height: 59px;
+}
+
+.h-\[px\] {
+  height: px;
+}
+
+.h-\[80px\] {
+  height: 80px;
 }
 
 .min-h-\[100vh\] {
@@ -909,6 +929,11 @@ video {
 .bg-green-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
+
+.bg-color-primary-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 37 9 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75 {
