--- a/css/main.css
+++ b/css/main.css
@@ -574,10 +574,6 @@ video {
   }
 }
 
-.static {
-  position: static;
-}
-
 .absolute {
   position: absolute;
 }
@@ -590,73 +586,20 @@ video {
   inset: 0px;
 }
 
-.-left-5 {
-  left: -1.25rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.-z-10 {
-  z-index: -10;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
 .z-10 {
   z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
 }
 
 .z-50 {
   z-index: 50;
 }
 
-.order-1 {
-  order: 1;
-}
-
-.order-2 {
-  order: 2;
+.float-left {
+  float: left;
 }
 
 .m-auto {
   margin: auto;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.-mt-\[350px\] {
-  margin-top: -350px;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
 }
 
 .mb-20 {
@@ -667,28 +610,16 @@ video {
   margin-bottom: 1rem;
 }
 
-.ml-0 {
-  margin-left: 0px;
-}
-
 .ml-10 {
   margin-left: 2.5rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-\[150px\] {
-  margin-top: 150px;
-}
-
-.mt-\[50px\] {
-  margin-top: 50px;
 }
 
 .block {
@@ -711,40 +642,16 @@ video {
   display: none;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
 
-.h-\[600px\] {
-  height: 600px;
+.h-\[200px\] {
+  height: 200px;
 }
 
 .h-full {
   height: 100%;
-}
-
-.h-\[5\] {
-  height: 5;
-}
-
-.h-\[59px\] {
-  height: 59px;
-}
-
-.h-\[px\] {
-  height: px;
-}
-
-.h-\[80px\] {
-  height: 80px;
 }
 
 .min-h-\[100vh\] {
@@ -757,22 +664,6 @@ video {
 
 .w-20 {
   width: 5rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[75\%\] {
-  width: 75%;
-}
-
-.w-\[85\%\] {
-  width: 85%;
 }
 
 .w-full {
@@ -853,32 +744,12 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
-.border {
-  border-width: 1px;
-}
-
 .border-2 {
   border-width: 2px;
 }
 
-.border-b-\[20px\] {
-  border-bottom-width: 20px;
-}
-
-.border-l-\[20px\] {
-  border-left-width: 20px;
-}
-
-.border-r-\[20px\] {
-  border-right-width: 20px;
-}
-
-.border-t-\[20px\] {
-  border-top-width: 20px;
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-solid {
@@ -890,25 +761,19 @@ video {
   border-color: rgb(51 51 51 / var(--tw-border-opacity));
 }
 
-.border-color-secondary {
+.border-b-gray-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(2 75 51 / var(--tw-border-opacity));
-}
-
-.border-x-white {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
-  border-right-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-y-transparent {
-  border-top-color: transparent;
-  border-bottom-color: transparent;
+  border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-color-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 143 124 / var(--tw-bg-opacity));
 }
 
 .bg-color-primary-light {
@@ -931,42 +796,17 @@ video {
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
 
-.bg-color-primary-dark {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 37 9 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-75 {
-  --tw-bg-opacity: 0.75;
+.p-2 {
+  padding: 0.5rem;
 }
 
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.from-color-secondary {
-  --tw-gradient-from: #024b33 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(2 75 51 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-green-500 {
-  --tw-gradient-from: #22c55e var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(34 197 94 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.via-color-blob {
-  --tw-gradient-to: rgb(170 39 223 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #AA27DF var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.to-color-secondary {
-  --tw-gradient-to: #024b33 var(--tw-gradient-to-position);
-}
-
-.to-green-500 {
-  --tw-gradient-to: #22c55e var(--tw-gradient-to-position);
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-5 {
@@ -992,11 +832,6 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1017,12 +852,21 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .text-center {
   text-align: center;
 }
 
-.font-rubik-gemstones {
-  font-family: "Rubik Gemstones", sans;
+.text-right {
+  text-align: right;
 }
 
 .text-2xl {
@@ -1045,6 +889,11 @@ video {
   line-height: 1;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1058,33 +907,16 @@ video {
   font-weight: 500;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
-.capitalize {
-  text-transform: capitalize;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
+.leading-4 {
+  line-height: 1rem;
 }
 
 .leading-relaxed {
   line-height: 1.625;
 }
 
-.leading-snug {
-  line-height: 1.375;
-}
-
 .tracking-wider {
   letter-spacing: 0.05em;
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-color-primary-dark {
@@ -1102,23 +934,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .text-green-950 {
   --tw-text-opacity: 1;
   color: rgb(5 46 22 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.opacity-30 {
-  opacity: 0.3;
-}
-
-.blur-2xl {
-  --tw-blur: blur(40px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .duration-200 {
@@ -1186,6 +1009,12 @@ swiper-container-3d swiper-slide-shadow-left,
   background-image: none;
 }
 
+.box {
+  --mask: linear-gradient(to top left, #0000 100px,#000 0);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
 @keyframes moveup {
   0% {
     margin-top: 40px;
@@ -1227,10 +1056,6 @@ swiper-container-3d swiper-slide-shadow-left,
   color: rgb(2 75 51 / var(--tw-text-opacity));
 }
 
-.hover\:opacity-80:hover {
-  opacity: 0.8;
-}
-
 @media (min-width: 640px) {
   .sm\:px-6 {
     padding-left: 1.5rem;
@@ -1239,6 +1064,14 @@ swiper-container-3d swiper-slide-shadow-left,
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -1271,52 +1104,15 @@ swiper-container-3d swiper-slide-shadow-left,
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .md\:pr-10 {
-    padding-right: 2.5rem;
-  }
-
-  .md\:text-left {
-    text-align: left;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:absolute {
-    position: absolute;
-  }
-
-  .lg\:relative {
-    position: relative;
-  }
-
-  .lg\:order-1 {
-    order: 1;
-  }
-
-  .lg\:order-2 {
-    order: 2;
-  }
-
-  .lg\:ml-\[300px\] {
-    margin-left: 300px;
-  }
-
-  .lg\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .lg\:mt-\[100px\] {
-    margin-top: 100px;
+  .lg\:block {
+    display: block;
   }
 
   .lg\:flex {
@@ -1327,12 +1123,16 @@ swiper-container-3d swiper-slide-shadow-left,
     display: none;
   }
 
-  .lg\:w-\[75\%\] {
-    width: 75%;
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
+  .lg\:justify-center {
+    justify-content: center;
   }
 
   .lg\:gap-8 {
@@ -1344,13 +1144,9 @@ swiper-container-3d swiper-slide-shadow-left,
     padding-right: 2rem;
   }
 
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .lg\:font-normal {
-    font-weight: 400;
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
