--- a/input.css
+++ b/input.css
@@ -2,6 +2,75 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Custom CSS */
+.my-carousel {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .my-slide {
+    width: 100%;
+    height: 100%;
+   
+    display: none;
+    float: left;
+  }
+
+  .my-slide.active {
+    display: block;
+  }
+
+  .my-pagination {
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .my-pagination button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+.carousel-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .carousel-slide {
+    width: 100%;
+    display: none;
+    animation: slide 5s linear infinite;
+  }
+  
+  .carousel-slide img {
+    width: 100%;
+    height: auto;
+  }
+  
+  @keyframes slide {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    25% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-100%);
+    }
+    75% {
+      transform: translateX(-100%);
+    }
+  }
+  
+
 /* CSS to hide all images except the first one */
 .image-container .image-item {
     display: none;
