--- a/css/main.css
+++ b/css/main.css
@@ -602,6 +602,10 @@ video {
   grid-column: span 2 / span 2;
 }
 
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
 .float-left {
   float: left;
 }
@@ -630,6 +634,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-\[300px\] {
+  margin-top: 300px;
+}
+
 .block {
   display: block;
 }
@@ -654,8 +662,8 @@ video {
   height: 100vh;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-\[150px\] {
+  height: 150px;
 }
 
 .h-\[50px\] {
@@ -771,6 +779,14 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-b-8 {
+  border-bottom-width: 8px;
+}
+
+.border-t-8 {
+  border-top-width: 8px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -780,9 +796,19 @@ video {
   border-color: rgb(31 143 124 / var(--tw-border-opacity));
 }
 
+.border-b-color-primary {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(31 143 124 / var(--tw-border-opacity));
+}
+
 .border-b-gray-300 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-t-color-primary {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(31 143 124 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -795,11 +821,6 @@ video {
   background-color: rgb(31 143 124 / var(--tw-bg-opacity));
 }
 
-.bg-color-primary-light {
-  --tw-bg-opacity: 1;
-  background-color: rgb(10 104 45 / var(--tw-bg-opacity));
-}
-
 .bg-color-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(2 75 51 / var(--tw-bg-opacity));
@@ -808,11 +829,6 @@ video {
 .bg-green-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -828,8 +844,9 @@ video {
   padding: 1.25rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-4 {
@@ -883,6 +900,10 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .text-left {
@@ -973,9 +994,30 @@ video {
   color: rgb(5 46 22 / var(--tw-text-opacity));
 }
 
+.text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-gray-500 {
+  --tw-shadow-color: #6b7280;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .duration-200 {
@@ -1114,11 +1156,64 @@ swiper-container-3d swiper-slide-shadow-left,
   background-image: none;
 }
 
-.box {
-  --mask: linear-gradient(to top left, #0000 100px,#000 0);
+/* .box {
+  --mask: linear-gradient(to top left, #0000 100px,#000 0); 
+    
   -webkit-mask: var(--mask);
-  mask: var(--mask);
+          mask: var(--mask);
+}  */
+
+/* .box {
+  position: relative;
+  background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.9)),url('img/tomato.jpg');
+    background-size: linear-gradient(rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)), cover;
+    background-repeat: linear-gradient(rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)), no-repeat;
+  width: 100%;
+  height: 100%;
 }
+
+.box::before,
+.box::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 20%;
+  background: linear-gradient(to top left, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+}
+
+.box::after {
+  left: 50%;
+  background: linear-gradient(to top right, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+} */
+
+/* .box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),url('img/tomato.jpg');
+  background-size: cover, cover;
+  background-repeat: no-repeat, no-repeat;
+}
+
+.box::before,
+.box::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 30%;
+  background: linear-gradient(to top left, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+}
+
+.box::after {
+  left: 50%;
+  background: linear-gradient(to top right, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+} */
 
 @keyframes moveup {
   0% {
@@ -1200,6 +1295,10 @@ swiper-container-3d swiper-slide-shadow-left,
 }
 
 @media (min-width: 1024px) {
+  .lg\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
   .lg\:block {
     display: block;
   }
