--- a/input.css
+++ b/input.css
@@ -118,13 +118,65 @@ swiper-container {
     background-image: none;
     
   }
-  
-  .box {
+
+  /* .box {
   --mask: linear-gradient(to top left, #0000 100px,#000 0); 
     
   -webkit-mask: var(--mask);
           mask: var(--mask);
+}  */
+/* .box {
+  position: relative;
+  background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.9)),url('img/tomato.jpg');
+    background-size: linear-gradient(rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)), cover;
+    background-repeat: linear-gradient(rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)), no-repeat;
+  width: 100%;
+  height: 100%;
 }
+
+.box::before,
+.box::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 20%;
+  background: linear-gradient(to top left, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+}
+
+.box::after {
+  left: 50%;
+  background: linear-gradient(to top right, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+} */
+
+/* .box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),url('img/tomato.jpg');
+  background-size: cover, cover;
+  background-repeat: no-repeat, no-repeat;
+}
+
+.box::before,
+.box::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 30%;
+  background: linear-gradient(to top left, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+}
+
+.box::after {
+  left: 50%;
+  background: linear-gradient(to top right, transparent 50%, #000 50%);
+  background-size: 100% 100%;
+} */
+
 
 @keyframes moveup {
     0% {
